--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <section id="profile">
     <h2>ABOUT ME</h2>
-    <p>A vigilant and analytical cybersecurity professional with a passion for digital defense. My experience is rooted in creating secure environments, responding to incidents, and staying ahead of emerging threats. I thrive on the challenge of protecting critical information and infrastructure.</p>
+    <p> I'm a cybersecurity professionial with over a decade of experience across sales, IT, and cybersecurity, I specialize in risk reduction, compliance, vulnerability management, customer service, and retention. My work has helped organizations retain millions in revenue and stay ahead of evolving and rising threats. I thrive on crafting secure systems and immersive experiences, whether it's patching vulnerabilities, designing dashboards, or protecting personal information. Please feel free to reach out if you have any questions, a role to be filled, or want to start a project, let’s build something bold, secure, and unforgettable.
+</p>
   </section>
 
   <section id="skills">
